--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,54 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Home | E-Shopper</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
-    <link href="css/price-range.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/responsive.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->       
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
-</head><!--/head-->
+{% extends 'base.html' %}
+{% load static %}
 
-<body>
-	<header id="header"><!--header-->
-		
-		<div class="header-middle"><!--header-middle-->
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="logo pull-left">
-							<a href="index.html"><img src="images/home/logo.png" alt="" /></a>
-						</div>
-					</div>
-					<div class="col-sm-8">
-						<div class="shop-menu pull-right">
-							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-								<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div><!--/header-middle-->
-	
-	</header><!--/header-->
-	
+	{% block title %}
+    <title>Home | E-Shopper</title>
+	{% endblock %}
+
+	{% block css %}
+	<link href="{% static 'css/index.css' %}" rel="stylesheet">
+	{% endblock %}
+
+	{% block content %}
 	<section id="slider"><!--slider-->
 		<div class="container">
 			<div class="row">
@@ -63,17 +24,17 @@
 						<div class="carousel-inner">
 							<div class="item active">
 								<div class="col-sm">
-									<img src="images/slider1.jpeg" class="img-responsive" alt="" />
+									<img src="{% static 'images/slider1.jpeg' %}" class="img-responsive" alt="" />
 								</div>
 							</div>
 							<div class="item">
 								<div class="col-sm">
-									<img src="images/slider2.jpeg" class="img-responsive" alt="" />
+									<img src="{% static 'images/slider2.jpeg' %}" class="img-responsive" alt="" />
 								</div>
 							</div>
 							<div class="item">
 								<div class="col-sm">
-									<img src="images/slider4.jpeg" class="img-responsive" alt="" />
+									<img src="{% static 'images/slider4.jpeg' %}" class="img-responsive" alt="" />
 								</div>
 							</div>
 							
@@ -137,10 +98,12 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 										<div class="productinfo text-center">
-											<img src="images/book1.jpeg" alt="" />
+											<a href="{% url 'book' %}">
+												<img src="{% static 'images/book1.jpeg' %}" alt="" />
+											</a>
 											<h2>$56</h2>
 											<p>Book 1</p>
-											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+											<a href="{% url 'login_url' %}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 										
 								</div>
@@ -156,10 +119,10 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/book2.jpeg" alt="" />
+										<img src="{% static 'images/book2.jpeg' %}" alt="" />
 										<h2>$23</h2>
 										<p>Book 1</p>
-										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+										<a href="{% url 'login_url' %}" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 									</div>
 									
 								</div>
@@ -175,7 +138,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/book3.jpeg" alt="" />
+										<img src="{% static 'images/book3.jpeg' %}" alt="" />
 										<h2>$33</h2>
 										<p>Book 1</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -194,7 +157,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/book4.jpeg" alt="" />
+										<img src="{% static 'images/book4.jpeg' %}" alt="" />
 										<h2>$55</h2>
 										<p>Book 1</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -214,13 +177,13 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/book5.jpeg" alt="" />
+										<img src="{% static 'images/book5.jpeg' %}" alt="" />
 										<h2>$12</h2>
 										<p>Book $</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 									</div>
 									
-									<img src="images/home/sale.png" class="new" alt="" />
+									<img src="{% static 'images/home/sale.' %}png" class="new" alt="" />
 								</div>
 								<div class="choose">
 									<ul class="nav nav-pills nav-justified">
@@ -234,7 +197,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/book6.jpeg" alt="" />
+										<img src="{% static 'images/book6.jpeg' %}" alt="" />
 										<h2>$23</h2>
 										<p>Book 1</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -262,7 +225,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book7.jpeg" alt="" />
+													<img src="{% static 'images/book7.jpeg"' %} alt="" />
 													<h2>$77</h2>
 													<p>Book 1</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -275,7 +238,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book8.jpeg" alt="" />
+													<img src="{% static 'images/book8.jpeg"' %} alt="" />
 													<h2>$74</h2>
 													<p>Book 2</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -288,7 +251,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book9.jpeg" alt="" />
+													<img src="{% static 'images/book9.jpeg"' %} alt="" />
 													<h2>$27</h2>
 													<p>Book 3</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -303,7 +266,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book10.jpeg" alt="" />
+													<img src="{% static 'images/book10.jpeg' %}" alt="" />
 													<h2>$53</h2>
 													<p>Book 4</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -316,7 +279,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book11.jpeg" alt="" />
+													<img src="{% static 'images/book11.jpeg' %}" alt="" />
 													<h2>$75</h2>
 													<p>Book 5</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -329,7 +292,7 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/book12.jpeg" alt="" />
+													<img src="{% static 'images/book12.jpeg' %}" alt="" />
 													<h2>$16</h2>
 													<p>Book 6</p>
 													<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -353,80 +316,10 @@
 			</div>
 		</div>
 	</section>
-	
-	<footer id="footer"><!--Footer-->	
-		<div class="footer-widget">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Service</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Online Help</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">Change Location</a></li>
-								<li><a href="#">FAQ’s</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Policies</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
-								<li><a href="#">Billing System</a></li>
-								<li><a href="#">Ticket System</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>About Shopper</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Company Information</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Store Location</a></li>
-								<li><a href="#">Affillate Program</a></li>
-								<li><a href="#">Copyright</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-3 col-sm-offset-1">
-						<div class="single-widget">
-							<h2>About Shopper</h2>
-							<form action="#" class="searchform">
-								<input type="text" placeholder="Your email address" />
-								<button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right"></i></button>
-								<p>Get the most recent updates from <br />our site and be updated your self...</p>
-							</form>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-		
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<p class="pull-left">Copyright © 2013 E-SHOPPER Inc. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.themeum.com">Themeum</a></span></p>
-				</div>
-			</div>
-		</div>
-		
-	</footer><!--/Footer-->
-	
+	{% endblock%}
+
 
   
-    <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/price-range.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/main.js"></script>
-</body>
-</html>
+	{% block js %}
+    <script src="{% static 'js/index.js' %}"></script>
+	{% endblock %}
